2022-10-12T16:39:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3236378609 # 929
* notice: last 14d: unq all: 10 30
* notice: prev accum: outdated-unq outdated-all / unq all: 636 2488 / 655 2519
* notice: next accum: outdated-unq outdated-all / unq all: 636 2488 / 654 2518
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -2 / 1 1
* notice: removed / changed dates: [] / [2022-09-28]

2022-10-12T08:28:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3233170635 # 928
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 636 2488 / 654 2518
* notice: next accum: outdated-unq outdated-all / unq all: 636 2488 / 655 2519
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-12]

2022-10-12T02:21:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3231566408 # 927
* notice: last 14d: unq all: 11 30
* notice: prev accum: outdated-unq outdated-all / unq all: 635 2486 / 654 2517
* notice: next accum: outdated-unq outdated-all / unq all: 636 2488 / 654 2518
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +7 +11 -0 -0 / 7 11
* notice: removed / changed dates: [2022-09-27] / [2022-09-28 2022-10-11]

2022-10-11T16:33:53Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3228599218
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 635 2486 / 648 2508
* notice: next accum: outdated-unq outdated-all / unq all: 635 2486 / 654 2517
* notice: prev exec diff / last date diff / accum: unq all: +6 +9 -0 -0 / +7 +10 -0 -0 / 7 10
* notice: removed / changed dates: [] / [2022-10-11]

2022-10-11T08:31:29Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3225305616
* notice: last 14d: unq all: 5 22