@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-30T02:32:07Z",
-  "count" : 4,
+  "timestamp" : "2022-10-13T02:05:52Z",
+  "count" : 3,
   "count_minmax" : [ 2, 4 ],
-  "count_decinc" : [ -0, +4 ],
+  "count_decinc" : [ -1, +4 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
