@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-10-12T16:39:19Z",
-  "count_outdated" : 2488,
-  "uniques_outdated" : 636,
-  "count" : 2518,
-  "uniques" : 654,
+  "timestamp" : "2022-10-13T02:05:52Z",
+  "count_outdated" : 2491,
+  "uniques_outdated" : 638,
+  "count" : 2520,
+  "uniques" : 655,
   "clones" : [
     {
-      "timestamp": "2022-09-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
-    {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "count_minmax": [ 2, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -70,8 +63,8 @@
     },
     {
       "timestamp": "2022-10-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
