@@ -1,15 +1,10 @@
 {
-  "count": 30,
+  "count": 29,
   "uniques": 10,
   "clones": [
     {
-      "timestamp": "2022-09-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "uniques": 1
     },
     {
@@ -49,7 +44,7 @@
     },
     {
       "timestamp": "2022-10-12T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
