@@ -1,3 +1,11 @@
+2022-10-13T02:05:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3239180695 # 930
+* notice: last 14d: unq all: 10 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 636 2488 / 654 2518
+* notice: next accum: outdated-unq outdated-all / unq all: 638 2491 / 655 2520
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-28] / [2022-09-29 2022-10-12]
+
 2022-10-12T16:39:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3236378609 # 929
 * notice: last 14d: unq all: 10 30
